crates/swc/tests/tsc-references/nonPrimitiveAccessProperty_es5.1.normal.js
import _extends from "@swc/helpers/lib/_extends.js";
var a;
a.toString();
a.nonExist(); // error
var destructuring = a.destructuring; // error
var rest = _extends({}, a); // ok
